edit errr and code css#

--- a/views/pages/register.ejs
+++ b/views/pages/register.ejs
@@ -5,7 +5,7 @@
 <body>
     <?- include('../partials/header') -?>
     <?- include('../partials/nav') -?>
-    <div class="container">
+    <div class="container-fluid">
         <h1 class="text-center">REGISTER</h1>
         <? if(typeof errors !== 'undefined'){ ?>
         <div class="form-group row">
@@ -20,25 +20,25 @@
         </div>
         <? } ?>
         <form class="mt-3" action="/register" method="POST" novalidate>
-            <div class="form-group row">
+            <div class="form-group row p-2">
                 <div class="col-7 mx-auto">
                     <input type="text" class="form-control" name="name" value="<?= user.name ?>"
                         placeholder="Your name">
                 </div>
             </div>
-            <div class="form-group row">
+            <div class="form-group row p-2">
                 <div class="col-7 mx-auto">
                     <input type="email" class="form-control" name="email" value="<?= user.email ?>"
                         placeholder="Your email">
                 </div>
             </div>
-            <div class="form-group row">
+            <div class="form-group row p-2">
                 <div class="col-7 mx-auto">
                     <input type="password" class="form-control" name="password" value="<?= user.password ?>"
                         placeholder="Your password">
                 </div>
             </div>
-            <div class="form-group row">
+            <div class="form-group row p-2">
                 <div class="col-7 mx-auto">
                     <input type="password" class="form-control" name="confirm_password"
                         value="<?= user.confirm_password ?>" placeholder="Confirm your password">
