--- a/views/pages/dashboard.ejs
+++ b/views/pages/dashboard.ejs
@@ -5,7 +5,7 @@
 <body>
     <?- include('../partials/header') -?>
     <?- include('../partials/nav') -?>
-    <div class="container">
+    <div class="container-fluid">
         <h1 class="text-center">Hello</h1>
         <div class="text-center my-3 border border-success">
             John Doe
