--- a/views/pages/error.ejs
+++ b/views/pages/error.ejs
@@ -5,7 +5,7 @@
 <body>
     <?- // include('../partials/header') -?>
     <?- // include('../partials/nav') -?>
-    <div class="container">
+    <div class="container-fluid">
         <h1>
             <?= message ?>
         </h1>
