--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -5,7 +5,7 @@
 <body>
     <?- include('../partials/header') -?>
     <?- include('../partials/nav') -?>
-    <div class="container text-center">
+    <div class="container-fluid text-center">
         <h1>
             <?= pageData.title ?>
         </h1>
