--- a/views/pages/login.ejs
+++ b/views/pages/login.ejs
@@ -5,8 +5,8 @@
 <body>
     <?- include('../partials/header') -?>
     <?- include('../partials/nav') -?>
-    <div class="container">
-        <h1 class="text-center">LOGIN</h1>
+    <div class="container-fluid">
+        <h1 class="text-center ">LOGIN</h1>
         <? if(typeof errors !== 'undefined'){ ?>
         <div class="form-group row">
             <div class="col-7 mx-auto">
@@ -20,13 +20,13 @@
         </div>
         <? } ?>
         <form class="mt-3" action="/login" method="POST" novalidate>
-            <div class="form-group row">
+            <div class="form-group row p-2">
                 <div class="col-7 mx-auto">
                     <input type="email" class="form-control" name="email" value="<?= user.email ?>"
                         placeholder="Your email">
                 </div>
             </div>
-            <div class="form-group row">
+            <div class="form-group row p-2">
                 <div class="col-7 mx-auto">
                     <input type="password" class="form-control" name="password" value="<?= user.password ?>"
                         placeholder="Your password">
